created functions and some index css changes

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Codragon</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class='madLibsEdit'>
-    </div>
-    <div class='madLibsPreview'>
+    <div class="container">
+      <h1>Game Of Codragons</h1>
+      <div class="wrapper">
+        <div class="madLibsEdit"></div>
+        <div class="madLibsPreview"></div>
+      </div>
     </div>
     <script src="do-not-touch.js"></script>
     <script src="madlibs.js"></script>
