edited html and css, slight change in functions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,156 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="madLibsEdit"></div>
-    <div class="madLibsPreview"></div>
+    <div class="top-left">
+      <img src="/assets/leftcorner.png" alt="" />
+    </div>
+    <div class="top-right">
+      <img src="/assets/rightcorner.png" alt="" />
+    </div>
+    <div class="bottom-left">
+      <img src="/assets/bottomleftcorner.png" alt="" />
+    </div>
+    <div class="bottom-right">
+      <img src="/assets/bottomrightcorner.png" alt="" />
+    </div>
+    <div class="container">
+      <header>
+        <img class="red-logo" src="/assets/headlogo.png" alt="" />
+        <img class="got-logo" src="/assets/got-logo.png" alt="" />
+      </header>
+      <section class="intro">
+        <h1>WELCOME TO THE MAD LIBS CODRAGON GAME</h1>
+      </section>
+      <div class="cast-container">
+        <div class="top">
+          <div class="cast-frames">
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="targaryen" src="/assets/targaryen.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />Daenerys Targaryen<img
+                  src="/assets/bullets.png"
+                />
+              </p>
+            </div>
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="jon-snow" src="/assets/jon-snow.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />JOHN SNOW
+                <img src="/assets/bullets.png" />
+              </p>
+            </div>
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="arya" src="/assets/arya.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />ARYA STARK
+                <img src="/assets/bullets.png" />
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="top">
+          <div class="cast-frames">
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="cersei" src="/assets/cersei.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />CERSEI LANNISTER<img
+                  src="/assets/bullets.png"
+                />
+              </p>
+            </div>
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="jaime" src="/assets/jaime.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />JAIME LANNISTER
+                <img src="/assets/bullets.png" />
+              </p>
+            </div>
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="night-king" src="/assets/nightking.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />NIGHT KING
+                <img src="/assets/bullets.png" />
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="top">
+          <div class="cast-frames">
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="drogon" src="/assets/drogon.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />DROGON<img
+                  src="/assets/bullets.png"
+                />
+              </p>
+            </div>
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="viserion" src="/assets/viserion.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />VISERION
+                <img src="/assets/bullets.png" />
+              </p>
+            </div>
+            <div class="frame">
+              <img src="/assets/frame.png" alt="" />
+              <img class="rhegal" src="/assets/rhegal.png" alt="" />
+              <p>
+                <img src="/assets/bullets.png" />RHEGAL
+                <img src="/assets/bullets.png" />
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h1 class="start-game">LET'S START THE GAME:</h1>
+      <div class="game-container">
+        <div class="edit-container">
+          <div class="game-top-left">
+            <img src="/assets/leftcorner.png" alt="" />
+          </div>
+          <div class="game-top-right">
+            <img src="/assets/rightcorner.png" alt="" />
+          </div>
+          <div class="game-bottom-left">
+            <img src="/assets/bottomleftcorner.png" alt="" />
+          </div>
+          <div class="game-bottom-right">
+            <img src="/assets/bottomrightcorner.png" alt="" />
+          </div>
+
+          <div class="edit-frame">
+            <img src="/assets/frame.png" alt="" />
+            <div class="madLibsEdit"></div>
+          </div>
+        </div>
+        <div class="preview-container">
+          <div class="game-top-left">
+            <img src="/assets/leftcorner.png" alt="" />
+          </div>
+          <div class="game-top-right">
+            <img src="/assets/rightcorner.png" alt="" />
+          </div>
+          <div class="game-bottom-left">
+            <img src="/assets/bottomleftcorner.png" alt="" />
+          </div>
+          <div class="game-bottom-right">
+            <img src="/assets/bottomrightcorner.png" alt="" />
+          </div>
+          <div class="edit-frame">
+            <img src="/assets/frame.png" alt="" />
+            <div class="madLibsPreview"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="do-not-touch.js"></script>
     <script src="madlibs.js"></script>
   </body>
