--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>repl.it</title>
+    <title>GAME OF THRONES MAD LIBS</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -117,6 +117,7 @@
         </div>
       </div>
       <h1 class="start-game">LET'S START THE GAME:</h1>
+      <p class="intro-game">Champion you need to stop the mad Dragon from breathing fire 🔥🐉 <br> you can do this by filling the blanks in the following text:</p>
       <div class="game-container">
         <div class="edit-container">
           <div class="game-top-left">
@@ -157,6 +158,7 @@
         </div>
       </div>
     </div>
+    <audio id="got-music" src="/assets/game-of-thrones.mp3" loop="loop" preload="auto"> 
     <script src="do-not-touch.js"></script>
     <script src="madlibs.js"></script>
   </body>
