--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div class="container">
       <header>
         <img class="red-logo" src="/assets/headlogo.png" alt="" />
-        <img class="got-logo" src="/assets/got-logo.png" alt="" />
+        <img class="main-logo" src="/assets/Main-Logo.png" alt="" />
       </header>
       <section class="intro">
-        <h1>WELCOME TO THE MAD LIBS CODRAGON GAME</h1>
+        <h1>Characters</h1>
       </section>
       <div class="cast-container">
         <div class="top">
