--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
         </div>
       </div>
       <h1 class="start-game">LET'S START THE GAME:</h1>
-      <p class="intro-game">Champion you need to stop the mad Dragon from breathing fire 🔥🐉 <br> you can do this by filling the blanks in the following text:</p>
+      <p class="intro-game">
+        Champion you need to stop the mad Dragon from breathing fire 🔥🐉 <br />
+        you can do this by filling the blanks in the following text:
+      </p>
       <div class="game-container">
         <div class="edit-container">
           <div class="game-top-left">
@@ -158,7 +161,7 @@
         </div>
       </div>
     </div>
-    <audio id="got-music" src="/assets/game-of-thrones.mp3" loop="loop" preload="auto"> 
+    <audio id="got-music" src="/assets/game-of-thrones.mp3" autoplay loop />
     <script src="do-not-touch.js"></script>
     <script src="madlibs.js"></script>
   </body>
